fixed some links

--- a/talks.html
+++ b/talks.html
@@ -120,6 +120,14 @@
   <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>,
+    First Year Graduate Student Seminar,
+    Texasd A&amp;M University, 2 April 2026.
+    <a href="talks/25/FYGSS.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
     Keynote Speaker (virtual),
     International Symposium on Current Trends in Mathematical Sciences,
@@ -148,10 +156,11 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and webs of maximally inflected curves</I></font>,
     Algebra seminar,
     Michigan State University, 11 March 2026.
-    <a href="talks/26/JMM_Kurlin.txt"></a>
+    Some <a href="research/stories/webs/42.html">pictures</a>.
+    The <a href="talks/26/WebWelsch.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
@@ -176,6 +185,15 @@
     Undergraduate talk,  
     University of Notre Dame, 5 March 2026.
     <a href="talks/23/SAGA.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and webs of maximally inflected curves</I></font>,
+    Geometry seminar,
+    Texas A&amp;M University, 2 March 2026.
+    Some <a href="research/stories/webs/42.html">pictures</a>.
+    The <a href="talks/26/WebWelsch.txt">abstract</a>.
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
@@ -411,6 +429,14 @@
     <a href="talks/25/PGO4AG.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>,
+    First Year Graduate Student Seminar,
+    Texasd A&amp;M University, 11 Februry 2025.
+    <a href="talks/25/FYGSS.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
