--- a/research/stories/index.html
+++ b/research/stories/index.html
@@ -17,7 +17,7 @@
 <!---------------->
 <!--  These are all 150 points high  --->
 <!----- December 2025  ----------->
-<A HREF="Webs/42.html"><IMG SRC="Webs/HexWeb.gif" height=150pt BORDER=2 ALT="Web of a maximally inflected curve"></a>
+<A HREF="webs/42.html"><IMG SRC="webs/HexWeb.gif" height=150pt BORDER=2 ALT="Web of a maximally inflected curve"></a>
 
 <!----- May 2025  ----------->
 <A HREF="Bestiary/Bestiary.html"><IMG SRC="Bestiary/notPyramid_BV.gif" height=150pt BORDER=2 ALT="A Bestiary of Bloch Varieties"></a>
