added more webs

--- a/research/stories/webs/42.html
+++ b/research/stories/webs/42.html
@@ -8,7 +8,7 @@
 <body bgcolor="#ffffff">
 <!---------------------------------------->
 <h1>Webs, curves, and tableaux for maximally inflected quintics in <b>P</b><sup>2</sup></h1>
-<h2>Frank Sottile</h2>
+<h2>Frank Sottile</h2>    <a href="spaceWebs.html">space Webs</a>
 
 <hr>
 <font color=maroon size=+1><b>Legend:</b></font>
