--- a/talks.html
+++ b/talks.html
@@ -109,7 +109,6 @@
  </td>
  </tr>
  <!---------------------------------------------------------------------------------------------------->
- <tr>
  <td colspan=3>
  <!---------------------------------------------------------------------------------------------------->
  <hr>
@@ -148,6 +147,14 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
+    <FONT COLOR="AA00FF"><I>Some algebraic geometry in applications</I></font>,
+    AMUSE Seminar,
+    Texas A&amp;M University, 17 March 2026.
+    <a href="talks/23/SAGA.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
     Colloquium,
     Western University, 12 March 2026.
@@ -165,10 +172,10 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>Families of graphs  Bloch varieties are perfect Morse functions</I></font>,
     Mathematical Physics and Operator Algebras seminar,
     Michigan State University, 10 March 2026.
-    <a href="talks/26/JMM_Kurlin.txt"></a>
+    <a href="talks/25/TX-LA_Spectral.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
@@ -453,220 +460,12 @@
     <a href="talks/25/JMM_25.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Bloch Variety</I></font>,
-    Special Session on Computations and Applications of Algebraic Geometry and Commutative Algebra,
-    AMS-AustMS-NZMS International Meeting  in Auckland, New Zealand, taking place December 9&ndash;13, 2024.
-    <a href="talks/24/CPD.txt">Abstract</a>.
-    <a href="talks/24/NZ_AMS.pdf">text of talk</a>.
-   </li>
- <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
- <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
-   <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Advanced</a>,
-    9 November 2024. <a href="talks/24/Five-color.txt">abstract</a>.
- </li>
- <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-  <li> <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>,
-       AIM Mathematics Teachers' Circle, AIM, 24 October 2024.
-     <A HREF="research/stories/hyperbolic_football/index.html">abstract</A>
- </li>
- <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Periodic Operators for Algebraic Geometers</I></font>,
-    Minisymposium on Nonlinear Algebra in Applications,
-    <a href="https://math.artsandsciences.baylor.edu/conferences/siam-conference">SIAM TX-LA Section Meeting</a>,
-    Baylor, TX, 11&ndash;13 October 2024.
-    <a href="talks/24/DPO4AG.txt">abstract</a>.
-    <a href="talks/24/DPO4AG.pdf">text of talk</a>.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-    <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
-    Math Club,   Benedictine College, 8 October 2024.
-    <a href="talks/24/Shape.txt">Abstract</a>.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Colloquium, Benedictine College, 7 October 2024.
-      <a href="talks/23/SAGA.txt">Abstract</a>. 
-  </li>
- <!---------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
-    AMS Special Session on Non-Archimedean, Algebraic, Tropical Geometry and applications, Fall Central Section Meeting,
-    San Antonio, TX, 14&ndash;15 September 2024.
-    <a href="talks/21/Discriminant.txt">abstract</a>.  <a href="talks/24/SanAntonio.pdf">text of talk</a>.
-   </li>
-  <!--------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Bounds on Reality</I></font>, 
-    <a href="https://www.math.tamu.edu/seminars/cag/">Combinatorial Algebraic Geometry Seminar</a>,
-    TAMU, 30 August 2024.
-    <a href="talks/24/RealBounds.txt">abstract</a>
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Frontiers of Arithmetic in Enumerative Geometry</I></font>, 
-    <a href="https://www.birs.ca/events/2024/5-day-workshops/24w5229">Computational Geometry</a>,
-    BIRS, Banff, Alberta Canada, 
-    23&ndash;28 June 2024.
-    <a href="talks/24/Frontiers.txt">abstract</a>
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Bounds on Reality</I></font>, 
-    <a href="http://www.birs.ca/event/24w5197">Positive Solutions of Polynomial Systems Arising from Real-life Applications</a>,
-    BIRS IMAG, Granada, Spain, 
-    20 May 2024.
-    <a href="talks/24/RealBounds.txt">abstract</a>
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
-    Berkeley Math Circle Colloquium, 5 May 2024.
-    <a href="talks/21/Cubic.txt">abstract</a>
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-     <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski Map (New conjectured reality)</I></font>,
-     AMS Special Session in in Celebration of Bruce Reznick's retirement, AMS Western Section Meeting, San Francisco State University,
-      4 May 2024.
-     <a href="talks/24/WWSigns.txt">Abstract</a> 
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
-     Commutative Algebra/Algebraic Geometry Seminar, University of California, Berkeley, 23 April 2024.
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>,
-     Berkeley Spectral Theorem Seminar, 17 April 2024.
-     <a href="talks/24/CPoDPO.txt">Abstract</a> 
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-     <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule in quantum Schubert calculus</I></font>,
-     Berkeley Combinatorics Seminar, 17 April 2024.
-     <a href="talks/23/qMN.txt">Abstract</a>. 
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
-    Colloquium, Georgia Tech, 28 March 2024.  <a href="talks/24/Golden.txt">Abstract</a>
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math club, Georgia Tech, 
-      27 March 2024.   <a href="talks/23/SAGA.txt">Abstract</a>. 
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski map (New conjectured reality)</I></font>,
-    Algebra Seminar, Georgia Tech, 25 March 2024.     <a href="talks/24/WWSigns.txt">abstract</a>.
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski map (New conjectured reality)</I></font>
-     Commutative Algebra/Algebraic Geometry Seminar, University of California, Berkeley, 19 March 2024.
-      <a href="talks/24/WWSigns.txt">abstract</a>.
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
-    <a href="https://mathcircle.berkeley.edu/">Berkeley Math Circle Beginners II</a>,
-    University of California, Berkeley,
-    13 March 2024.
-    <a href="talks/18/Shape.txt">Abstract</a>.
-  </li>
- <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
-    Invited talk, <a href="https://sites.google.com/view/golden-section-2024/home">MAA Golden Section meeting</a>, University of
-    California, Santa Cruz, 24 February 2024.
-    <a href="talks/24/Golden.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski map</I></font>
-    Geometry Seminar, Texas A&amp;M 19 February 2024.
-      <a href="talks/24/WWSigns.txt">abstract</a>
-  </li>
-   <!---------------------------------------------------------------------------------------->
-   <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
-    Colloquium, Cardiff University, 13 February 2024.
-    <a href="talks/24/Golden.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Society,  Swansea University.
-    12 February 2024.  <a href="talks/23/SAGA.txt">Abstract</a>. 
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
-    <a href="https://sites.google.com/view/appliedalgebraandgeometry/home/18th-meeting-swansea">18th UK Applied Algebra and Geometry network
-    meeting</a>, 
-    12 February  2024, Swansea  University. 
-   <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
-    Geometry Seminar, University of Edinburgh.
-    31 January 2024,
-    <a href="talks/23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Society,  University of Edinburgh.
-    30 January 2024.   <a href="talks/23/SAGA.txt">Abstract</a>. 
-  </li>
-  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-  <li>
-    <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
-    <a href="https://www.newton.ac.uk/event/emgw02/">Applied and computational algebraic geometry</a>,
-    22 &ndash; 26 January 2024, Isaac Newton Institute. 
-   <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
-  </li>
-  <!---------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------->
 
 <!------------------------------------------------------------------------------------------->
 </UL>
 <!------------------------------------------------------------------------------------------->
 
 </td>
-</tr>
 </table>
 <!---------------------------------------------------------------------------->
 </td>
