--- a/talks/outreach.html
+++ b/talks/outreach.html
@@ -70,7 +70,14 @@
 <font size=+1 color=brown>Major Activities</font>
 <ul>
  
- <!------------------------------------------------------------------>
+ <!----------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
+    Berkeley Math Circle Colloquium, 5 May 2024.
+    <a href="talks/21/Cubic.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!------------------------------------------------------------------>
   <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
        Public Lecture, TAMU Math Fest, 16 April 2016.
      <A HREF="16/Shape_MathFair.txt">abstract</A>
@@ -98,6 +105,15 @@
 <font size=+1 color=brown>Activities for Middle School Students</font>
 <ul>
 
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
+    <a href="https://mathcircle.berkeley.edu/">Berkeley Math Circle Beginners II</a>,
+    University of California, Berkeley,
+    13 March 2024.
+    <a href="talks/18/Shape.txt">Abstract</a>.
+  </li>
+ <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The game of Criss-Cross</I></font>
@@ -369,6 +385,12 @@
 <font size=+1 color=brown>Activities for High School students</font>
 <ul>
 
+ <!--------------------------------------------------------------------------------------------------->
+ <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
+   <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Advanced</a>,
+    9 November 2024. <a href="talks/24/Five-color.txt">abstract</a>.
+ </li>
+ <!--------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
@@ -781,6 +803,31 @@
 <font size=+1 color=brown>Activities for Undergraduates</font>
 <ul>
 
+  <!---------------------------------------------------------------------------------------------------->
+ <li>
+    <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
+    Math Club,   Benedictine College, 8 October 2024.
+    <a href="talks/24/Shape.txt">Abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math club, Georgia Tech, 
+      27 March 2024.   <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Society,  Swansea University.
+    12 February 2024.  <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Society,  University of Edinburgh.
+    30 January 2024.   <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club &amp; SIAM Student Organization, UT Dallas,
@@ -1111,6 +1158,12 @@
 <font size=+1 color=brown>Activities for Postgraduates</font>
 <ul>
   
+ <!--------------------------------------------------------------------------------------------------->
+  <li> <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>,
+       AIM Mathematics Teachers' Circle, AIM, 24 October 2024.
+     <A HREF="research/stories/hyperbolic_football/index.html">abstract</A>
+ </li>
+ <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
