--- a/talks/talks.html
+++ b/talks/talks.html
@@ -11,21 +11,21 @@
 An <A HREF="selected_talks.html">abridged</A> list.
 <BR>
 <!---  Lots of talks.                                     --->
-<!---  82 Major invited talks  (+5, as 2 were series)     --->
+<!---  86 Major invited talks  (+5, as 2 were series)     --->
 <!---   7 Refereed Conferences                            --->
-<!---  84 Other conferences                               --->
-<!---  92 Colloquia                                       --->
+<!---  89 Other conferences                               --->
+<!---  95 Colloquia                                       --->
 <!---  13 Short Courses   ( +41, as they were courses)    --->
-<!--- 220 Seminar talks   ( +1 some double talks)         --->
-<!--  498 + 47   total                                    --->
-<!---   3 Plenary type Outreach                           --->
-<!---  39 Middle School Outreach                          --->
-<!---  58 High School Outreach                            --->
-<!---  43 Presentations to Undergraduates                 --->
-<!---  40 Presentations to Postgraduates                  --->
+<!--- 228 Seminar talks   ( +1 some double talks)         --->
+<!--  518 + 47   total                                    --->
+<!---   4 Plenary type Outreach                           --->
+<!---  40 Middle School Outreach                          --->
+<!---  59 High School Outreach                            --->
+<!---  47 Presentations to Undergraduates                 --->
+<!---  41 Presentations to Postgraduates                  --->
 <!---   7 Outreach Professional Presentations             --->
-<!--  190 Outreach talks in total                         --->
-<!--- 688 (+ 43) talks in all                             --->
+<!--  198 Outreach talks in total                         --->
+<!--- 716 (+ 47) talks in all                             --->
 
 <BR>
 <BR>
@@ -39,7 +39,43 @@ Jump to <!-- <A HREF="#invited">invited talks</A>, -->
         <A HREF="#courses">short courses</A>, or
         <A HREF="#seminar">research seminars</A>.
 <UL>
- <!-------------------------------   vvvvv  82  vvvvvv   ---------------------------------->
+  <!-------------------------------   vvvvv  86  vvvvvv   ---------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Frontiers of Arithmetic in Enumerative Geometry</I></font>, 
+    <a href="https://www.birs.ca/events/2024/5-day-workshops/24w5229">Computational Geometry</a>,
+    BIRS, Banff, Alberta Canada, 
+    23&ndash;28 June 2024.
+    <a href="24/Frontiers.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Bounds on Reality</I></font>, 
+    <a href="http://www.birs.ca/event/24w5197">Positive Solutions of Polynomial Systems Arising from Real-life Applications</a>,
+    BIRS IMAG, Granada, Spain, 
+    20 May 2024.
+    <a href="24/RealBounds.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Invited talk, <a href="https://sites.google.com/view/golden-section-2024/home">MAA Golden Section meeting</a>, University of
+    California, Santa Cruz, 24 February 2024.
+    <a href="24/Golden.txt">Abstract</a>. <!--&nbsp; <a href="23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
+    <a href="https://sites.google.com/view/appliedalgebraandgeometry/home/18th-meeting-swansea">18th UK Applied Algebra and Geometry network
+    meeting</a>, 
+    12 February  2024, Swansea  University. 
+   <a href="24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!-------------------------------   vvvvv  82  vvvvvv   ---------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
@@ -714,7 +750,51 @@ Jump to <A HREF="#invited">invited talks</A>,
         <A HREF="#courses">short courses</A>, or
         <A HREF="#seminar">research seminars</A>.
 <UL>
- <!--------------------------   vvvvvvvvv   Number 84  vvvvvvvvv  ------------------------->
+  <!--------------------------   vvvvvvvvv   Number 89  vvvvvvvvv  ------------------------->
+   <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Bloch Variety</I></font>,
+    Special Session on Computations and Applications of Algebraic Geometry and Commutative Algebra,
+    AMS-AustMS-NZMS International Meeting  in Auckland, New Zealand, taking place December 9&ndash;13, 2024.
+    <a href="24/CPD.txt">Abstract</a>.
+    <a href="24/NZ_AMS.pdf">text of talk</a>.
+   </li>
+ <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Periodic Operators for Algebraic Geometers</I></font>,
+    Minisymposium on Nonlinear Algebra in Applications,
+    <a href="https://math.artsandsciences.baylor.edu/conferences/siam-conference">SIAM TX-LA Section Meeting</a>,
+    Baylor, TX, 11&ndash;13 October 2024.
+    <a href="24/DPO4AG.txt">abstract</a>.
+    <a href="24/DPO4AG.pdf">text of talk</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
+    AMS Special Session on Non-Archimedean, Algebraic, Tropical Geometry and applications, Fall Central Section Meeting,
+    San Antonio, TX, 14&ndash;15 September 2024.
+    <a href="21/Discriminant.txt">abstract</a>.  <a href="24/SanAntonio.pdf">text of talk</a>.
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+     <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski Map (New conjectured reality)</I></font>,
+     AMS Special Session in in Celebration of Bruce Reznick's retirement, AMS Western Section Meeting, San Francisco State University,
+      4 May 2024.
+     <a href="24/WWSigns.txt">Abstract</a> 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
+    <a href="https://www.newton.ac.uk/event/emgw02/">Applied and computational algebraic geometry</a>,
+    22 &ndash; 26 January 2024, Isaac Newton Institute. 
+   <a href="24/CPoDPO.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!--------------------------   vvvvvvvvv   Number 84  vvvvvvvvv  ------------------------->
    <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Bloch Discriminants</I></font>
@@ -1350,6 +1430,26 @@ Jump to <A HREF="#invited">invited talks</A>,
         <AHREF="#courses">short courses</A>, or
         <A HREF="#seminar">research seminars</A>.
 <UL>
+ <!---------------------------    vvv 95 vvv   -------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Colloquium, Benedictine College, 7 October 2024.
+      <a href="23/SAGA.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
+    Colloquium, Georgia Tech, 28 March 2024.  <a href="24/Golden.txt">Abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Colloquium, Cardiff University, 13 February 2024.
+    <a href="24/Golden.txt">Abstract</a>. <!--&nbsp; <a href="23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------    vvv 92 vvv   -------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
@@ -1414,7 +1514,7 @@ Jump to <A HREF="#invited">invited talks</A>,
  <!---------------------------------------------------------------------------------------->
  <!-- -------------------------------------------------------------------------------------->
  <li> <font color="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>, Colloquium, Clemson University, 13 March 2019.
-     <A HREF="talks/17/Galois.txt">abstract</A>
+     <A HREF="17/Galois.txt">abstract</A>
   </li>
  <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
@@ -2052,7 +2152,64 @@ Jump to <A HREF="#invited">invited talks</A>,
         <A HREF="#courses">short courses</A>, or
         <A HREF="#colloquiua">colloquiua</A>.
 <UL>
- <!------------------------------  vvvv   220    vvvv     ---------------------------------->
+  <!------------------------------  vvvv   228    vvvv     ---------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Bounds on Reality</I></font>, 
+    <a href="https://www.math.tamu.edu/seminars/cag/">Combinatorial Algebraic Geometry Seminar</a>,
+    TAMU, 30 August 2024.
+    <a href="24/RealBounds.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
+     Commutative Algebra/Algebraic Geometry Seminar, University of California, Berkeley, 23 April 2024.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>,
+     Berkeley Spectral Theorem Seminar, 17 April 2024.
+     <a href="24/CPoDPO.txt">Abstract</a> 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+     <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule in quantum Schubert calculus</I></font>,
+     Berkeley Combinatorics Seminar, 17 April 2024.
+     <a href="23/qMN.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski map (New conjectured reality)</I></font>,
+    Algebra Seminar, Georgia Tech, 25 March 2024.     <a href="24/WWSigns.txt">abstract</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski map (New conjectured reality)</I></font>
+     Commutative Algebra/Algebraic Geometry Seminar, University of California, Berkeley, 19 March 2024.
+      <a href="24/WWSigns.txt">abstract</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski map</I></font>
+    Geometry Seminar, Texas A&amp;M 19 February 2024.
+      <a href="24/WWSigns.txt">abstract</a>
+  </li>
+   <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Geometry Seminar, University of Edinburgh.
+    31 January 2024,
+    <a href="23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!------------------------------  vvvv   220    vvvv     ---------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
