--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,9 +28,7 @@
       <a href="25.2/653.html">Math 653: Algebra I</a>.
              <!--  students--><br>
    <!--      Math 691, Section 605, Research. <br>
-      Credit Hours:, -->
-
-      <br><br>  </li>
+      Credit Hours:, --> </li>
 
 
     <li><B><font color="9900FF">Summer 2025</font></B><br>
@@ -48,7 +46,7 @@
       <!--   Credit Hours: Bott (9), -->
       
     <li><B><font color="9900FF">Fall 2024</font></B><br>
-      <a href="24.2/toric.html">Math 666, Section 600: Toric Varieties</a>.
+      <a href="24.2/Toric.html">Math 666, Section 600: Toric Varieties</a>.
              <!-- 15 students--><br>
       Math 691, Section 604, Research. <br>
       <!-- Credit Hours: Bott (6), Lopez (3), Robinson (6), Sagayaraj (3) -->
