--- a/research/stories/webs/spaceWebs.html
+++ b/research/stories/webs/spaceWebs.html
@@ -7,61 +7,77 @@
 </head>
 <body bgcolor="#ffffff">
 <!---------------------------------------->
-<h1>Zeroes of Re(31) for quintic maximally inflected space curves</h1>
+<h1>Zeroes of mixed Wronskians for quintic maximally inflected space curves</h1>
 <h2>Frank Sottile</h2>
 
 <hr>
 <table border=1>
-  <tr><td align="center"><h2>W22-webs</h2></td><td align="center"><h2>W31-webs</h2> </td></tr>
+  <tr valign="center"><td align="center"><h2>Zeroes of W22</h2></td>
+                     <td align="center"><h2>W31^4/W40^2 &in;R<sub>>0</sub></h2> </td>
+                     <td align="center"><h2>W31^2/W22/W40 &in;R<sub>>0</sub></h2> </td></tr>
   <tr>
     <td><img alt="web" src="1_22.gif"></td>
     <td><img alt="web" src="1_31.gif"></td>
-  </tr><tr>
+    <td><img alt="web" src="1_IL.gif"></td>
+ </tr><tr>
     <td><img alt="web" src="2_22.gif"></td>
     <td><img alt="web" src="2_31.gif"></td>
+    <td><img alt="web" src="2_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="3_22.gif"></td>
     <td><img alt="web" src="3_31.gif"></td>
+    <td><img alt="web" src="3_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="4_22.gif"></td>
     <td><img alt="web" src="4_31.gif"></td>
+    <td><img alt="web" src="4_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="5_22.gif"></td>
-    <td><img alt="web" src="5_31.gif"></td>
-  </tr><tr>
+    <td><img alt="web" src="5_31.gif"></td> 
+    <td><img alt="web" src="5_IL.gif"></td>
+ </tr><tr>
     <td><img alt="web" src="6_22.gif"></td>
     <td><img alt="web" src="6_31.gif"></td>
+    <td><img alt="web" src="6_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="7_22.gif"></td>
     <td><img alt="web" src="7_31.gif"></td>
+    <td><img alt="web" src="7_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="8_22.gif"></td>
     <td><img alt="web" src="8_31.gif"></td>
+    <td><img alt="web" src="8_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="9_22.gif"></td>
     <td><img alt="web" src="9_31.gif"></td>
+    <td><img alt="web" src="9_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="10_22.gif"></td>
     <td><img alt="web" src="10_31.gif"></td>
+    <td><img alt="web" src="10_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="11_22.gif"></td>
     <td><img alt="web" src="11_31.gif"></td>
+    <td><img alt="web" src="11_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="12_22.gif"></td>
     <td><img alt="web" src="12_31.gif"></td>
+    <td><img alt="web" src="12_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="13_22.gif"></td>
     <td><img alt="web" src="13_31.gif"></td>
+    <td><img alt="web" src="13_IL.gif"></td>
   </tr><tr>
     <td><img alt="web" src="14_22.gif"></td>
     <td><img alt="web" src="14_31.gif"></td>
+    <td><img alt="web" src="14_IL.gif"></td>
     </tr>
 </table>  
 
 <hr>
 <!---------------------------------------------------------------------------->
 <address></address>
-<i><!-- hhmts start -->Last modified: Thu Dec 11 7:50 EST 2025 <!-- hhmts end --></i>
+<i><!-- hhmts start -->Last modified: Wed Feb 18 15:10 EST 2026 <!-- hhmts end --></i>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 
